--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-      <section class="hero fade snap-section">
+      <section class="hero fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
           <div class="hero__content">
             <h1 class="hero__headline">Design Partner for<br />Founders &amp; Funds.</h1>
@@ -30,25 +30,23 @@
       <section class="services fade snap-section">
         <div class="container fade-target">
           <div class="section__header">
-            <span class="section__eyebrow">Services</span>
+            <span class="section__eyebrow">Focus Areas</span>
           </div>
           <div class="two-col">
             <article class="two-col__item">
               <h2 class="section__title">For Founders</h2>
               <p class="section__body">
-                You’re building fast. I help you stay fast with clarity and confidence.<br /><br />
+                I help you stay fast with clarity and confidence.<br /><br />
                 <em>What I do</em><br />
-                I work with founders on positioning, product direction, narrative, and brand, and help turn strategy into concrete decisions the team can execute.<br /><br />
-                Design for focus.
+                I work with founders on positioning, product direction, narrative, and brand, and help turn strategy into concrete decisions the team can execute.
               </p>
             </article>
             <article class="two-col__item">
               <h2 class="section__title">For Funds</h2>
               <p class="section__body">
-                Strong companies grow from clear direction.<br /><br />
+                Clear direction keeps companies aligned.<br /><br />
                 <em>What I do</em><br />
-                I help investors strengthen their portfolio companies with differentiated products and coherent brands that support build, launch, and raise moments.<br /><br />
-                Design for performance.
+                I help investors strengthen their portfolio companies with differentiated products and coherent brands that support build, launch, and raise moments.
               </p>
             </article>
           </div>
@@ -61,7 +59,7 @@
             <span class="section__eyebrow">Approach</span>
           </div>
           <h2 class="section__title approach__title">
-            Direction is the outcome. Clarity is the way to get there.
+            Direction is the outcome.<br />Clarity is the way to get there.
           </h2>
           <p class="section__body approach__body">
             I work with founders and investors to create clarity, so direction becomes visible, decisions become aligned, and products deliver real value.
@@ -83,8 +81,22 @@
             <span class="section__eyebrow">Selected collaborations</span>
           </div>
           <p class="section__title companies__list">
-            I’ve partnered with founders and funds across early-stage ventures and established organisations, including Ananda, Boost, Cherry, BCG, EyeEm, Insempra, and Together.
+            I've partnered with founders and funds across early-stage ventures and established organisations, including Ananda, Boost, Cherry, BCG, EyeEm, Insempra, and Together.
           </p>
+        </div>
+      </section>
+
+      <section class="principles fade snap-section" data-header-theme="dark">
+        <div class="container fade-target">
+          <div class="section__header">
+            <span class="section__eyebrow">Principles</span>
+          </div>
+          <div class="principles__list">
+            <div class="principles__item">Clarity creates direction.</div>
+            <div class="principles__item">Direction guides decisions.</div>
+            <div class="principles__item">Decisions inform products.</div>
+            <div class="principles__item">Products deliver value.</div>
+          </div>
         </div>
       </section>
 
@@ -99,20 +111,6 @@
         </div>
       </section>
 
-      <section class="principles fade snap-section">
-        <div class="container fade-target">
-          <div class="section__header">
-            <span class="section__eyebrow">Principles</span>
-          </div>
-          <div class="principles__list">
-            <div class="principles__item">Clarity creates direction.</div>
-            <div class="principles__item">Direction guides decisions.</div>
-            <div class="principles__item">Decisions inform products.</div>
-            <div class="principles__item">Products deliver value.</div>
-          </div>
-        </div>
-      </section>
-
       <section class="image-block image-block--bottom fade snap-section">
         <div class="container container--edge fade-target">
           <figure class="image-block__figure">
@@ -122,7 +120,7 @@
       </section>
     </main>
 
-    <footer id="contact" class="footer fade snap-section">
+    <footer id="contact" class="footer fade snap-section" data-header-theme="dark">
       <div class="container fade-target">
         <div class="footer__top">
           <span class="footer__copy">© 2025 Obvious. All rights reserved.</span>
