--- a/legal.html
+++ b/legal.html
@@ -24,8 +24,7 @@
 
           <div class="legal__content">
             <p>Frank Müller-Pierstorff<br />
-            Personal project website<br />
-            Email: <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a></p>
+            Personal project website</p>
 
             <h2>Liability for content</h2>
             <p>The contents of this website were created with great care. However, I cannot guarantee the accuracy, completeness, or timeliness of the content. As a service provider, I am responsible for my own content on these pages pursuant to § 7(1) TMG. According to §§ 8 to 10 TMG, however, I am not obligated to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.</p>
@@ -36,7 +35,7 @@
             <p>The linked pages were checked for possible legal violations at the time of linking. No illegal content was recognizable at that time. Permanent control of the content of the linked pages is not reasonable without concrete evidence of a legal violation. If I become aware of any such infringements, I will remove such links immediately.</p>
 
             <h2>Data protection</h2>
-            <p>This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email). Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting <a href="mailto:frank@thisisobvious.com">frank@thisisobvious.com</a>.</p>
+            <p>This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email). Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting us.</p>
 
             <h2>Copyright</h2>
             <p>All content on this site is subject to copyright. Any use or reproduction requires prior written permission.</p>
@@ -51,7 +50,7 @@
       </section>
     </main>
 
-    <footer class="footer fade snap-section">
+    <footer class="footer fade snap-section" data-header-theme="dark">
       <div class="container fade-target">
         <div class="footer__top">
           <span class="footer__copy">© 2025 Obvious. All rights reserved.</span>
