--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="hero fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
           <div class="hero__content">
-            <h1 class="hero__headline">Design Partner for<br />Founders &amp; Funds.</h1>
+            <h1 class="hero__headline">Design Partner for Founders &amp; Funds.</h1>
             <p class="hero__subline">Design &rarr; Direction &rarr; Value</p>
           </div>
         </div>
