--- a/legal.html
+++ b/legal.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header fade">
       <div class="header__inner fade-target">
-        <a class="header__label" href="index.html">Obvious</a>
+        <a class="header__label" href="https://www.thisisobvious.com">Obvious</a>
         <a href="mailto:frank@thisisobvious.com" class="header__contact">Contact</a>
       </div>
     </header>
