--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         <div class="hero__scroll">&#8595;</div>
       </section>
 
+      <section class="companies fade snap-section">
+        <div class="container fade-target">
+          <div class="section__header">
+            <span class="section__eyebrow">Practice Lead</span>
+          </div>
+          <p class="section__title companies__list">
+            Frank Müller-Pierstorff, designer, founder and advisor. Former Global Creative Director at BCG, CPO at Together and CDO at EyeEm.
+          </p>
+        </div>
+      </section>
+
       <section class="services fade snap-section">
         <div class="container fade-target">
           <div class="section__header">
@@ -44,7 +55,7 @@
             <article class="two-col__item">
               <h2 class="section__title">For Funds</h2>
               <p class="section__body">
-                Clear direction keeps companies aligned.<br /><br />
+                Clear direction keeps companies aligned and drives growth.<br /><br />
                 <em>What I do</em><br />
                 I help investors strengthen their portfolio companies with differentiated products and coherent brands that support build, launch, and raise moments.
               </p>
