--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header fade" style="color: #fbf9f5;">
       <div class="header__inner fade-target">
         <a class="header__label" href="index.html" style="color: #fbf9f5;">Obvious</a>
-        <a href="mailto:frank@thisisobvious.com" class="header__contact" style="color: #fbf9f5;">Contact</a>
+        <a href="#connect" class="header__contact" style="color: #fbf9f5;">Contact</a>
       </div>
     </header>
 
@@ -27,7 +27,7 @@
         <div class="hero__scroll">&#8595;</div>
       </section>
 
-      <section class="companies fade snap-section">
+      <section class="companies companies--practice fade snap-section">
         <div class="container fade-target">
           <div class="section__header">
             <span class="section__eyebrow">Practice Lead</span>
@@ -64,17 +64,13 @@
         </div>
       </section>
 
-      <section class="approach fade snap-section" data-header-theme="dark">
+      <section class="quote fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
-          <div class="section__header">
-            <span class="section__eyebrow">Approach</span>
-          </div>
-          <h2 class="section__title approach__title">
-            Direction is the outcome.<br />Clarity is the way to get there.
-          </h2>
-          <p class="section__body approach__body">
-            I work with founders and investors to create clarity, so direction becomes visible, decisions become aligned, and products deliver real value.
-          </p>
+          <img src="mark.png" alt="" class="quote__mark" />
+          <blockquote class="quote__text">
+            Direction is the outcome. Clarity is the way to get there.
+          </blockquote>
+          <p class="quote__attribution">&mdash; Frank Müller-Pierstorff</p>
         </div>
       </section>
 
@@ -83,6 +79,72 @@
           <figure class="image-block__figure">
             <img src="img1.png" alt="Team collaborating" />
           </figure>
+        </div>
+      </section>
+
+      <section class="advisory fade snap-section" data-header-theme="dark">
+        <div class="container fade-target">
+          <div class="section__header">
+            <span class="section__eyebrow">Advisory & Clarity Work</span>
+          </div>
+          <h2 class="section__title advisory__title">
+            Direction, narrative, and product clarity, delivered fast.
+          </h2>
+          <div class="advisory__formats">
+            <div class="section__header">
+              <span class="section__eyebrow">Formats</span>
+            </div>
+            <div class="advisory__list">
+              <div class="advisory__item">
+                <div class="advisory__item-header">
+                  <span class="advisory__item-title">Clarity Sprint</span>
+                  <span class="advisory__item-duration">2&ndash;5 weeks</span>
+                </div>
+                <p class="advisory__item-description">Fast, structured alignment around product, brand, and narrative.</p>
+              </div>
+              <div class="advisory__item">
+                <div class="advisory__item-header">
+                  <span class="advisory__item-title">Design Partner</span>
+                  <span class="advisory__item-duration">retainer or ongoing</span>
+                </div>
+                <p class="advisory__item-description">Weekly guidance for founders who want direction without noise.</p>
+              </div>
+              <div class="advisory__item">
+                <div class="advisory__item-header">
+                  <span class="advisory__item-title">Portfolio Advisory</span>
+                  <span class="advisory__item-duration">for VCs</span>
+                </div>
+                <p class="advisory__item-description">Support for portfolio teams during ideate, build, launch, and raise moments.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="principles fade snap-section">
+        <div class="container fade-target">
+          <div class="section__header">
+            <span class="section__eyebrow">Principles</span>
+          </div>
+          <p class="principles__intro">My work follows a simple logic chain.</p>
+          <div class="principles__list">
+            <div class="principles__item">
+              <div class="principles__item-main">Clarity creates direction</div>
+              <div class="principles__item-sub">Knowing what matters sets the path.</div>
+            </div>
+            <div class="principles__item">
+              <div class="principles__item-main">Direction guides decisions</div>
+              <div class="principles__item-sub">A clear path makes choices obvious.</div>
+            </div>
+            <div class="principles__item">
+              <div class="principles__item-main">Decisions shape products</div>
+              <div class="principles__item-sub">Products reflect every choice a team makes.</div>
+            </div>
+            <div class="principles__item">
+              <div class="principles__item-main">Products deliver value</div>
+              <div class="principles__item-sub">Value is a result of aligned direction, not chance.</div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -97,28 +159,28 @@
         </div>
       </section>
 
-      <section class="principles fade snap-section" data-header-theme="dark">
+      <section id="connect" class="connect fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
           <div class="section__header">
-            <span class="section__eyebrow">Principles</span>
+            <span class="section__eyebrow">Let's connect</span>
           </div>
-          <div class="principles__list">
-            <div class="principles__item">Clarity creates direction.</div>
-            <div class="principles__item">Direction guides decisions.</div>
-            <div class="principles__item">Decisions inform products.</div>
-            <div class="principles__item">Products deliver value.</div>
-          </div>
-        </div>
-      </section>
-
-      <section class="background fade snap-section">
-        <div class="container fade-target">
-          <div class="section__header">
-            <span class="section__eyebrow">Background</span>
-          </div>
-          <p class="section__title background__copy">
-            20+ years of design and product leadership. Five ventures built. Angel investor. Brand architect. TED alumnus.
+          <p class="connect__intro">
+            A short conversation is usually enough to understand if we're a good fit.
           </p>
+          <div class="connect__list">
+            <div class="connect__item">
+              <span class="connect__label">Email</span>
+              <a href="mailto:frank@thisisobvious.com" class="connect__value">frank@thisisobvious.com</a>
+            </div>
+            <div class="connect__item">
+              <span class="connect__label">Call</span>
+              <a href="https://cal.com/thisisobvious" target="_blank" rel="noopener" class="connect__value">cal.com/thisisobvious</a>
+            </div>
+            <div class="connect__item">
+              <span class="connect__label">LinkedIn</span>
+              <a href="https://www.linkedin.com/in/frankmuellerpierstorff/" target="_blank" rel="noopener" class="connect__value">frankmuellerpierstorff</a>
+            </div>
+          </div>
         </div>
       </section>
 
