--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <p class="hero__subline">Design &rarr; Direction &rarr; Value</p>
           </div>
         </div>
-        <div class="hero__scroll">&#8595;</div>
+        <a href="#practice-lead" class="hero__scroll">&#8595;</a>
       </section>
 
-      <section class="companies companies--practice fade snap-section">
+      <section id="practice-lead" class="companies companies--practice fade snap-section">
         <div class="container fade-target">
           <div class="section__header">
             <span class="section__eyebrow">Practice Lead</span>
