--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div class="page">
-    <header class="header fade fade-target" style="color: #fbf9f5;">
-      <div class="header__inner">
+    <header class="header fade" style="color: #fbf9f5;">
+      <div class="header__inner fade-target">
         <a class="header__label" href="index.html" style="color: #fbf9f5;">Obvious</a>
         <a href="#connect" class="header__contact" style="color: #fbf9f5;">Contact</a>
       </div>
     </header>
 
     <main>
-      <section class="hero fade fade-target snap-section" data-header-theme="dark">
-        <div class="container">
+      <section class="hero fade snap-section" data-header-theme="dark">
+        <div class="container fade-target">
           <div class="hero__content">
             <h1 class="hero__headline">Design Partner for Founders &amp; Funds.</h1>
             <p class="hero__subline">Design &rarr; Direction &rarr; Value</p>
