--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="page">
-    <header class="header fade" style="color: #fbf9f5;">
+    <header class="header fade">
       <div class="header__inner fade-target">
-        <a class="header__label" href="index.html" style="color: #fbf9f5;">Obvious</a>
-        <a href="#connect" class="header__contact" style="color: #fbf9f5;">Contact</a>
+        <a class="header__label" href="index.html">Obvious</a>
+        <a href="#connect" class="header__contact">Contact</a>
       </div>
     </header>
 
