--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <header class="header fade" style="color: #fbf9f5;">
       <div class="header__inner fade-target">
-        <a class="header__label" href="index.html" style="color: #fbf9f5;">Obvious</a>
+        <a class="header__label" href="https://www.thisisobvious.com/" style="color: #fbf9f5;">Obvious</a>
         <a href="#connect" class="header__contact" style="color: #fbf9f5;">Contact</a>
       </div>
     </header>
