--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
   <!-- Font with display: optional for immediate rendering -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Satoshi:wght@400;500;700&display=optional" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -119,7 +119,7 @@
 
       <section class="quote fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
-          <img src="../mark.png" alt="" class="quote__mark" />
+          <img src="mark.png" alt="" class="quote__mark" />
           <blockquote class="quote__text">
             Direction is the outcome. Clarity is the way to get there.
           </blockquote>
@@ -130,7 +130,7 @@
       <section class="image-block image-block--top fade snap-section">
         <div class="container container--edge fade-target">
           <figure class="image-block__figure">
-            <img src="../img1.png" alt="Team collaborating" />
+            <img src="img1.png" alt="Team collaborating" />
           </figure>
         </div>
       </section>
@@ -240,7 +240,7 @@
       <section class="image-block image-block--bottom fade snap-section">
         <div class="container container--edge fade-target">
           <figure class="image-block__figure">
-            <img src="../img2.png" alt="Work session" />
+            <img src="img2.png" alt="Work session" />
           </figure>
         </div>
       </section>
@@ -249,19 +249,17 @@
     <footer id="contact" class="footer fade snap-section" data-header-theme="dark">
       <div class="container fade-target">
         <div class="footer__top">
-          <span class="footer__copy">© 2025 Obvious. All rights reserved.</span>
+          <span class="footer__copy">© 2025 Obvious.<span class="footer__copy-full"> All rights reserved.</span></span>
           <nav class="footer__links">
-            <a href="https://www.linkedin.com/in/frankmuellerpierstorff/" target="_blank" rel="noopener">LinkedIn</a>
-            <a href="../legal.html">Legal</a>
+            <a href="legal.html">Legal</a>
           </nav>
         </div>
         <div class="footer__divider"></div>
         <div class="footer__logo">
-          <img src="../logo.png" alt="Obvious logo" />
+          <img src="logo.png" alt="Obvious logo" />
         </div>
       </div>
     </footer>
   </div>
 </body>
 </html>
-
