--- a/legal.html
+++ b/legal.html
@@ -35,7 +35,9 @@
             <p>The linked pages were checked for possible legal violations at the time of linking. No illegal content was recognizable at that time. Permanent control of the content of the linked pages is not reasonable without concrete evidence of a legal violation. If I become aware of any such infringements, I will remove such links immediately.</p>
 
             <h2>Data protection</h2>
-            <p>This website does not use cookies, analytics tools, or any tracking mechanisms. No personal data is collected unless you actively contact me (e.g., by email). Emails sent to me are stored securely and only used for communication. No data is shared with third parties. You can request the deletion of your data at any time by contacting us.</p>
+            <p>This website uses Simple Analytics, a privacy-friendly analytics service based in the EU. Simple Analytics does not use cookies, does not collect personal data and does not track individual users in any form. Only aggregated, anonymous data such as page views, referrers and basic device information is processed to understand how the website is being used.</p>
+            <p>No user profiles are created and no data is shared with third parties. You can find more information about Simple Analytics at simpleanalytics.com.</p>
+            <p>Emails you send to me are stored securely and used only for communication.</p>
 
             <h2>Copyright</h2>
             <p>All content on this site is subject to copyright. Any use or reproduction requires prior written permission.</p>
