--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <span class="section__eyebrow">Selected collaborations</span>
           </div>
           <p class="section__title companies__list">
-            I've partnered with founders and funds across early-stage ventures and established organisations, including Ananda, Boost, Cherry, BCG, EyeEm, Insempra, and Together.
+            I've partnered with founders and funds across early-stage ventures and established organisations, including Ananda, Blueyard, Boost, Cherry, BCG, EyeEm, Insempra, and Together.
           </p>
         </div>
       </section>
@@ -261,5 +261,8 @@
       </div>
     </footer>
   </div>
+
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
