Revise hero section and advisory descriptions
Updated descriptions and titles for clarity and impact.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container fade-target">
           <div class="hero__content">
             <h1 class="hero__headline">Design Partner for Founders &amp; Funds.</h1>
-            <p class="hero__subline">Design &rarr; Direction &rarr; Value</p>
+            <p class="hero__subline">Clarity that scales.</p>
           </div>
         </div>
         <a href="#practice-lead" class="hero__scroll">&#8595;</a>
@@ -102,7 +102,7 @@
               <p class="section__body">
                 I help you stay fast with clarity and confidence.<br /><br />
                 <em>What I do</em><br />
-                I work with founders on positioning, product direction, narrative, and brand, and help turn strategy into concrete decisions the team can execute.
+                I work with founders on Purpose, positioning, product, narrative and help turn strategy into concrete decisions the team can execute.
               </p>
             </article>
             <article class="two-col__item">
@@ -110,7 +110,7 @@
               <p class="section__body">
                 Clear direction keeps companies aligned and drives growth.<br /><br />
                 <em>What I do</em><br />
-                I help investors strengthen their portfolio companies with differentiated products and coherent brands that support build, launch, and raise moments.
+                I help investors strengthen their portfolio companies with differentiated products and powerful narrative that support build, launch, and raise moments.
               </p>
             </article>
           </div>
@@ -153,14 +153,14 @@
                   <span class="advisory__item-title">Clarity Sprint</span>
                   <span class="advisory__item-duration">2&ndash;5 weeks</span>
                 </div>
-                <p class="advisory__item-description">Fast, structured alignment around product, brand, and narrative.</p>
+                <p class="advisory__item-description">Your story, sharpened. Before the round, before the launch.</p>
               </div>
               <div class="advisory__item">
                 <div class="advisory__item-header">
-                  <span class="advisory__item-title">Design Partner</span>
-                  <span class="advisory__item-duration">retainer or ongoing</span>
+                  <span class="advisory__item-title">Fractional CPO/CDO</span>
+                  <span class="advisory__item-duration">Retainer</span>
                 </div>
-                <p class="advisory__item-description">Weekly guidance for founders who want direction without noise.</p>
+                <p class="advisory__item-description">Product, design and brand leadership when you need it.</p>
               </div>
               <div class="advisory__item">
                 <div class="advisory__item-header">
