--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="hero fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
           <div class="hero__content">
-            <h1 class="hero__headline">Design Partner for Founders &amp; Funds.</h1>
+            <h1 class="hero__headline">Design Partner for Founders &amp; VCs</h1>
             <p class="hero__subline">Clarity that scales.</p>
           </div>
         </div>
