Swap headline and subline in hero section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <section class="hero fade snap-section" data-header-theme="dark">
         <div class="container fade-target">
           <div class="hero__content">
-            <h1 class="hero__headline">Clarity that scales</h1>
-            <p class="hero__subline">Design Partner for Founders &amp; VCs</p>
+            <h1 class="hero__headline">Design Partner for Founders &amp; VCs</h1>
+            <p class="hero__subline">Clarity that scales</p>
           </div>
         </div>
         <a href="#practice-lead" class="hero__scroll">&#8595;</a>
